--- a/g7_declaration/SQ3-1c.yml
+++ b/g7_declaration/SQ3-1c.yml
@@ -1,7 +1,7 @@
 question: >
-  Within the past 3 years, has your organisation or any of your partner organisations:
+  Within the past 3 years, please confirm whether your organisation or any of your partner organisations has:
   
   
-    - been guilty of grave professional misconduct?
+    - been guilty of grave professional misconduct
   
 type: boolean
