--- a/g7_declaration/SQ3-1d.yml
+++ b/g7_declaration/SQ3-1d.yml
@@ -1,5 +1,5 @@
 question: >
-  Within the past 3 years, has your organisation or any of your partner organisations:
+  Within the past 3 years, please confirm whether your organisation or any of your partner organisations has:
   
-    - entered into agreements with other economic operators aimed at distorting competition?
+    - entered into agreements with other economic operators aimed at distorting competition
 type: boolean
