--- a/g7_declaration/SQ3-1e.yml
+++ b/g7_declaration/SQ3-1e.yml
@@ -1,8 +1,8 @@
 question: >
- Within the past 3 years, has your organisation or any of your partner organisations:
+ Within the past 3 years, please confirm whether your organisation or any of your partner organisations has:
  
  
   - had a conflict of interest within the meaning of [Regulation
-    24 of the Public Contracts Regulations](http://www.legislation.gov.uk/uksi/2015/102/regulation/24/made)?
+    24 of the Public Contracts Regulations](http://www.legislation.gov.uk/uksi/2015/102/regulation/24/made)
   
 type: boolean
