--- a/g7_declaration/SQ3-1f.yml
+++ b/g7_declaration/SQ3-1f.yml
@@ -1,6 +1,6 @@
 question: >
-  Within the past 3 years, has your organisation or any of your partner organisations:
+  Within the past 3 years, please confirm whether your organisation or any of your partner organisations has:
 
 
-  - prepared a procurement procedure that distorted competition as described in [Regulation 41 of the Public Contracts Regulations 2015](http://www.legislation.gov.uk/uksi/2015/102/regulation/41/made)?
+  - prepared a procurement procedure that distorted competition as described in [Regulation 41 of the Public Contracts Regulations 2015](http://www.legislation.gov.uk/uksi/2015/102/regulation/41/made)
 type: boolean
