--- a/g7_declaration/SQ3-1g.yml
+++ b/g7_declaration/SQ3-1g.yml
@@ -1,10 +1,10 @@
 question: >
-  Within the past 3 years, has your organisation or any of your partner organisations:
+  Within the past 3 years, please confirm whether your organisation or any of your partner organisations has:
   
   
     - shown significant or persistent deficiencies in the performance of a substantive requirement under a prior public contract, a
       prior contract with a contracting entity, or a prior concession contract,
       which led to early termination of the contract, damages or other
-      comparable sanctions?
+      comparable sanctions
   
 type: boolean
