--- a/g7_declaration/SQ3-1h-i.yml
+++ b/g7_declaration/SQ3-1h-i.yml
@@ -1,8 +1,8 @@
 question: >
-  Within the past 3 years, has your organisation or any of your partner organisations:
+  Within the past 3 years, please confirm whether your organisation or any of your partner organisations has:
 
 
     - been guilty of serious misrepresentation of the information required
-      for the verification of the selection criteria?
+      for the verification of the selection criteria
   
 type: boolean
