--- a/g7_declaration/SQ3-1h-ii.yml
+++ b/g7_declaration/SQ3-1h-ii.yml
@@ -1,8 +1,8 @@
 question: >
-    Within the past 3 years, has your organisation or any of your partner organisations:
+    Within the past 3 years, please confirm whether your organisation or any of your partner organisations has:
 
 
     - withheld such information or failed to submit supporting documents
-      required under [Regulation 59 of the Public Contracts Regulations 2015](http://www.legislation.gov.uk/uksi/2015/102/regulation/59/made)?
+      required under [Regulation 59 of the Public Contracts Regulations 2015](http://www.legislation.gov.uk/uksi/2015/102/regulation/59/made)
       
 type: boolean
