--- a/g7_declaration/SQ3-1i-i.yml
+++ b/g7_declaration/SQ3-1i-i.yml
@@ -1,7 +1,7 @@
 question: >
-  Within the past 3 years, has your organisation or any of your partner organisations:
+  Within the past 3 years, please confirm whether your organisation or any of your partner organisations has:
   
   
-    - unduly influenced the decision-making process of the contracting authority?
+    - unduly influenced the decision-making process of the contracting authority
   
 type: boolean
