--- a/g7_declaration/SQ3-1i-ii.yml
+++ b/g7_declaration/SQ3-1i-ii.yml
@@ -1,7 +1,7 @@
 question: >
-  Within the past 3 years, has your organisation or any of your partner organisations:
+  Within the past 3 years, please confirm whether your organisation or any of your partner organisations has:
   
   
     - obtained confidential information that may give you undue
-  advantages in the procurement procedure?
+  advantages in the procurement procedure
 type: boolean
