--- a/g7_declaration/SQ4-1a.yml
+++ b/g7_declaration/SQ4-1a.yml
@@ -1,10 +1,10 @@
 question: >
-  Have any of your organisation's tax returns submitted on or after 1 October 2012:
+  please confirm whether any of your organisation's tax returns submitted on or after 1 October 2012 have:
   
   
-    - been found to be incorrect as of 1 April 2013?
+    - been found to be incorrect as of 1 April 2013
   
     - given rise to a criminal conviction for tax-related offences which is unspent,
-      or to a civil penalty for fraud or evasion?
+      or to a civil penalty for fraud or evasion
 
 type: boolean
