--- a/g7_declaration/SQ4-1a.yml
+++ b/g7_declaration/SQ4-1a.yml
@@ -1,5 +1,5 @@
 question: >
-  please confirm whether any of your organisation's tax returns submitted on or after 1 October 2012 have:
+  Please confirm whether any of your organisation's tax returns submitted on or after 1 October 2012 have:
   
   
     - been found to be incorrect as of 1 April 2013
