--- a/g7_declaration/SQ2-1abcd.yml
+++ b/g7_declaration/SQ2-1abcd.yml
@@ -1,5 +1,5 @@
 question: >
-  Within the past 5 years, please confirm whether anyone who represents your organisation or a partner organisation has been convicted of:
+  Please confirm whether, within the past 5 years, anyone who represents your organisation or a partner organisation has been convicted of:
   
   
   - conspiracy within the meaning of section 1 or 1A of the Criminal Law Act 1977 article 9 or 9A of the Criminal Attempts and Conspiracy (Northern Ireland)
