--- a/g7_declaration/SQ2-1f.yml
+++ b/g7_declaration/SQ2-1f.yml
@@ -1,5 +1,5 @@
 question: >
-  Within the past 5 years, please confirm whether anyone who represents your organisation or a partner organisation has been convicted of any offence listed in:
+  WPlease confirm whether, within the past 5 years, anyone who represents your organisation or a partner organisation has been convicted of any offence listed in:
   
   
     - section 41 of the Counter Terrorism Act 2008
