--- a/g7_declaration/SQ2-1ghijklmn.yml
+++ b/g7_declaration/SQ2-1ghijklmn.yml
@@ -1,5 +1,5 @@
 question: >
-  Within the past 5 years, please confirm whether anyone who represents your organisation or a partner organisation has been convicted of:
+  Please confirm whether, ithin the past 5 years, anyone who represents your organisation or a partner organisation has been convicted of:
   
   
     - any offence under sections 44 to 46 of the Serious Crime Act 2007 which relates to an offence covered by subparagraph (f)
