--- a/g7_declaration/SQ3-1b.yml
+++ b/g7_declaration/SQ3-1b.yml
@@ -1,5 +1,5 @@
 question: >
-    Within the past 3 years, please confirm whether your organisation or any of your partner organisations has:
+    Please confirm whether, within the past 5 years, your organisation or any of your partner organisations has:
   
   
     - been made bankrupt or the subject of insolvency or winding-up proceedings
