--- a/g7_declaration/SQ3-1g.yml
+++ b/g7_declaration/SQ3-1g.yml
@@ -1,5 +1,5 @@
 question: >
-  Within the past 3 years, please confirm whether your organisation or any of your partner organisations has:
+  Please confirm whether, within the past 5 years, your organisation or any of your partner organisations has:
   
   
     - shown significant or persistent deficiencies in the performance of a substantive requirement under a prior public contract, a
