--- a/g7_declaration/SQ3-1h-i.yml
+++ b/g7_declaration/SQ3-1h-i.yml
@@ -1,5 +1,5 @@
 question: >
-  Within the past 3 years, please confirm whether your organisation or any of your partner organisations has:
+  WPlease confirm whether, within the past 5 years, your organisation or any of your partner organisations has:
 
 
     - been guilty of serious misrepresentation of the information required
