--- a/g7_declaration/SQ3-1h-ii.yml
+++ b/g7_declaration/SQ3-1h-ii.yml
@@ -1,5 +1,5 @@
 question: >
-    Within the past 3 years, please confirm whether your organisation or any of your partner organisations has:
+    Please confirm whether, within the past 5 years, your organisation or any of your partner organisations has:
 
 
     - withheld such information or failed to submit supporting documents
