--- a/g7_declaration/SQ3-1i-ii.yml
+++ b/g7_declaration/SQ3-1i-ii.yml
@@ -1,5 +1,5 @@
 question: >
-  Within the past 3 years, please confirm whether your organisation or any of your partner organisations has:
+  Please confirm whether, within the past 3 years, your organisation or any of your partner organisations has:
   
   
     - obtained confidential information that may give you undue
