--- a/g7_declaration/SQ3-1j.yml
+++ b/g7_declaration/SQ3-1j.yml
@@ -1,5 +1,5 @@
 question: >
-  Within the past 3 years, please confirm whether your organisation or any of your partner organisations has:
+  Please confirm whether, within the past 3 years, your organisation or any of your partner organisations has:
   
     - provided misleading information that may have an influence on decisions concerning exclusion, selection or award
 type: boolean
