--- a/g7_declaration/SQ1-1j-ii.yml
+++ b/g7_declaration/SQ1-1j-ii.yml
@@ -3,4 +3,4 @@ type: text
 validations:
   -
     name: answer_required
-    message: "This question requires an answer because you answered 'licenced' or 'a member of a relevant organisation' to question 22"
+    message: "You must answer this question because you answered 'licenced' or 'a member of a relevant organisation' to question 22"
