--- a/g6/vendorCertifications.yml
+++ b/g6/vendorCertifications.yml
@@ -6,7 +6,7 @@ depends:
       - PaaS
       - IaaS
       - SCS
-hint: 'Examples of certifications include VMware Certified Professional and Oracle Gold Partner. (Optional.)'
+hint: 'Examples of employee or company certifications include VMware Certified Professional and Oracle Gold Partner. (Optional.)'
 listItemName: 'certification example'
 type: list
 addthing: 'Add another certification'
