--- a/g6/serviceSummary.yml
+++ b/g6/serviceSummary.yml
@@ -1,4 +1,4 @@
-hint: 'Please provide a short description of your service. You'll be asked to go into more detail about the features and benefits of your service on the next page. Company information should not be included here. You can provide a company description for your supplier page elsewhere. This content will be indexed by search. Using additional keywords may impact your acceptance onto the Digital Marketplace. (Maximum 50 words.)'
+hint: 'Please provide a short description of your service. You''ll be asked to go into more detail about the features and benefits of your service on the next page. Company information should not be included here. You can provide a company description for your supplier page elsewhere. This content will be indexed by search. Using additional keywords may impact your acceptance onto the Digital Marketplace. (Maximum 50 words.)'
 depends:
   -
     "on": lot
