--- a/g7_declaration/SQ1-1j-i.yml
+++ b/g7_declaration/SQ1-1j-i.yml
@@ -1,6 +1,6 @@
 question: >
-  Please confirm if, to provide the services specified in this procurement, it's a legal requirement in the state where you’re established to be:
-hint: 'You don't need to answer this question if your business was established in the UK.' 
+  Please confirm if, to provide the services specified in this procurement, it's a legal requirement in the state where you're established to be:
+hint: 'You don''t need to answer this question if your business was established in the UK.' 
 type: checkboxes
 options:
   -
