--- a/g7_declaration/SQE2a.yml
+++ b/g7_declaration/SQE2a.yml
@@ -1,4 +1,4 @@
-question: Please confirm whether you will provide G-Cloud services:
+question: 'Please confirm whether you will provide G-Cloud services:'
 hint: 'Choose all that apply.'
 type: checkboxes
 options:
