Correct question numbers for dependent question validation messages
Also add custom answer-required messages for a couple of dependent questions.

--- a/g7_declaration/SQ1-1j-i.yml
+++ b/g7_declaration/SQ1-1j-i.yml
@@ -6,4 +6,7 @@ options:
     label: licensed
   -
     label: a member of a relevant organisation
-
+validations:
+  -
+    name: answer_required
+    message: "You must answer this question because you answered no to question 26"
