--- a/g7_declaration/SQ4-1c.yml
+++ b/g7_declaration/SQ4-1c.yml
@@ -1,9 +1,8 @@
 question: >
   If you responded 'yes' to either question 53 or question 54, please provide details of any mitigating factors that
-  you think should be taken into
-  consideration.
+  you think should be taken into consideration.
 type: textbox_large 
 validations:
   -
     name: answer_required
-    message: "You must answer this question because you answered yes to either question 54 or question 55."
+    message: "You must answer this question because you answered yes to either question 53 or question 54."
