--- a/g7_declaration/AQA3.yml
+++ b/g7_declaration/AQA3.yml
@@ -1,3 +1,3 @@
-question: Do you confirm that you're prepared to provide any G-Cloud-related management information (MI) using the template in Attachment 8 of the supplier pack? (will include link)
+question: Do you confirm that you're prepared to provide all G-Cloud-related management information (MI) to CCS using the template in Attachment 7 of the supplier pack? (will include link)
 hint: CCS use MI to calculate any savings made by public sector organisations.
 type: boolean
