--- a/g7_declaration/SQ1-1a.yml
+++ b/g7_declaration/SQ1-1a.yml
@@ -4,4 +4,4 @@ type: text
 validations:
   -
     name: under_character_limit
-    message: "This field must be a maximum of 5000 characters."
+    message: "Maximum 5000 characters."
