--- a/g7_declaration/SQ1-1cii.yml
+++ b/g7_declaration/SQ1-1cii.yml
@@ -6,4 +6,4 @@ validations:
     message: "You must answer this question because you answered 'other' to question 19"
   -
     name: under_character_limit
-    message: "This field must be a maximum of 5000 characters."
+    message: "Maximum 5000 characters."
