Improve invalid DUNS number message
Previously there was a grammatical error and repetition of the hint text.

--- a/g7_declaration/SQ1-1g.yml
+++ b/g7_declaration/SQ1-1g.yml
@@ -4,4 +4,4 @@ type: text
 validations:
   -
     name: invalid_format
-    message: "There are either 9 digits in a DUNS number."
+    message: "You must enter a valid DUNS number."
