--- a/g7_declaration/PR2.yml
+++ b/g7_declaration/PR2.yml
@@ -1,2 +1,2 @@
-question: Do you accept the framework terms and conditions as set out in the Attachment 3 Framework Agreement and Call-Off Contract documents in the supplier pack? (will add link)
+question: Do you accept the framework terms and conditions as set out in the Attachment 3 Framework Agreement and Call-Off Contract documents in [the supplier pack](/suppliers/frameworks/g-cloud-7/download-supplier-pack)? 
 type: boolean
