--- a/g7_declaration/PR5.yml
+++ b/g7_declaration/PR5.yml
@@ -1,2 +1,2 @@
-question: Have you read and understood the guidance (link here) on how to apply to G-Cloud 7 using your supplier account on the Digital Marketplace?
+question: Have you read and understood [the guidance](https://www.digitalmarketplace.service.gov.uk/g-cloud/suppliers-guide) on how to apply to G-Cloud 7 using your supplier account on the Digital Marketplace?
 type: boolean
