--- a/g7_declaration/AQA3.yml
+++ b/g7_declaration/AQA3.yml
@@ -1,3 +1,3 @@
-question: Do you confirm that you're prepared to provide all G-Cloud-related management information (MI) to CCS using the template in Attachment 7 of the supplier pack? (will include link)
+question: Do you confirm that you're prepared to provide all G-Cloud-related management information (MI) to CCS using the template in Attachment 7 of [the supplier pack](/suppliers/frameworks/g-cloud-7/download-supplier-pack)? 
 hint: CCS use MI to calculate any savings made by public sector organisations.
 type: boolean
