--- a/g7_declaration/SQC2.yml
+++ b/g7_declaration/SQC2.yml
@@ -1,2 +1,2 @@
-question: Do you accept the declaration of compliance as described in Attachment 5 of the supplier pack? (will include link)
+question: Do you accept the declaration of compliance as described in Attachment 5 of [the supplier pack](/suppliers/frameworks/g-cloud-7/download-supplier-pack)?
 type: boolean
