--- a/g6/openStandardsSupported.yml
+++ b/g6/openStandardsSupported.yml
@@ -5,7 +5,7 @@ depends:
       - SaaS
       - PaaS
       - IaaS
-hint: 'Take a look at the GOV.UK Open Standards principles for more information on open standards.'
+hint: 'Take a look at the [GOV.UK Open Standards principles](https://www.gov.uk/government/publications/open-standards-for-government) for more information on open standards.'
 type: boolean
 filterLabel: 'Open standards supported and documented'
 validations:
