--- a/g7_declaration/SQ3-1h-i.yml
+++ b/g7_declaration/SQ3-1h-i.yml
@@ -3,6 +3,6 @@ question: >
 
 
     - been guilty of serious misrepresentation of the information required
-      for the verification of the selection criteria
+      for the fulfilment of the selection criteria
   
 type: boolean
