--- a/g7_declaration/SQ1-1e.yml
+++ b/g7_declaration/SQ1-1e.yml
@@ -1,6 +1,5 @@
 question: What is your organisation's company registration number?
 hint: >
   If you don't have a Companies House number, provide the company registration
-  number from the country where you first registered. If you don't have an
-  organisation, you don't have to answer this question.
+  number from the country where you first registered. 
 type: text
