--- a/g7_declaration/SQ1-1a.yml
+++ b/g7_declaration/SQ1-1a.yml
@@ -1,5 +1,5 @@
 question: What is the full name of the organisation applying to the G-Cloud 7 framework?
-hint: For a group of economic operators, this will be the name of the lead organisation. If you're submitting a response on behalf of another organisation, include their company name, not yours.
+hint: For a group of economic operators, this will be the name of the lead organisation. If you're submitting a response on behalf of another organisation, use their company name and details, not yours.
 type: text
 validations:
   -
