Mark optional questions as optional
These are optional questions but were not marked as such, which will prevent users from being able to mark their service as complete unless they fill-in these optional questions.

--- a/g6/apiType.yml
+++ b/g6/apiType.yml
@@ -18,3 +18,4 @@ validations:
     name: under_character_limit
     message: "API type can't be more than 200 characters."
 question: 'API type'
+optional: true
