--- a/g6/codeLibraryLanguages.yml
+++ b/g6/codeLibraryLanguages.yml
@@ -18,3 +18,4 @@ validations:
     name: under_character_limit
     message: 'Each code library must be no more than 100 characters.'
 question: 'Languages your code libraries are written in'
+optional: true
