--- a/g7_declaration/PR1.yml
+++ b/g7_declaration/PR1.yml
@@ -1,2 +1,2 @@
-question: Do you accept the terms of participation as described in Attachment 4 of [the supplier pack](/suppliers/frameworks/g-cloud-7/download-supplier-pack)? 
+question: Do you accept the terms of participation as described in Attachment 4 of [the supplier pack](/suppliers/frameworks/g-cloud-7/g-cloud-7-supplier-pack.zip)? 
 type: boolean
