Validation message updates
* Change the passive "This question requires an answer" to the active "You need to answer this question."
 * Add new "You need to confirm how you can back up your response." message for security assurances.

--- a/g6/apiAccess.yml
+++ b/g6/apiAccess.yml
@@ -10,5 +10,5 @@ filterLabel: 'API access available and supported'
 validations:
   -
     name: answer_required
-    message: 'This question requires an answer.'
+    message: 'You need to answer this question.'
 question: 'API access available and supported'
