--- a/g6/dataExtractionRemoval.yml
+++ b/g6/dataExtractionRemoval.yml
@@ -12,5 +12,5 @@ filterLabel: 'Data extraction/removal plan in place'
 validations:
   -
     name: answer_required
-    message: 'This question requires an answer.'
+    message: 'You need to answer this question.'
 question: 'Data extraction/removal plan in place'
