--- a/g6/datacentresSpecifyLocation.yml
+++ b/g6/datacentresSpecifyLocation.yml
@@ -12,5 +12,5 @@ filterLabel: 'User-defined data location'
 validations:
   -
     name: answer_required
-    message: 'This question requires an answer.'
+    message: 'You need to answer this question.'
 question: 'User-defined data location'
