--- a/g6/persistentStorage.yml
+++ b/g6/persistentStorage.yml
@@ -11,5 +11,5 @@ filterLabel: 'Persistent storage supported'
 validations:
   -
     name: answer_required
-    message: 'This question requires an answer.'
+    message: 'You need to answer this question.'
 question: 'Persistent storage supported'
