--- a/g6/selfServiceProvisioning.yml
+++ b/g6/selfServiceProvisioning.yml
@@ -10,5 +10,5 @@ filterLabel: 'Self-service provisioning supported'
 validations:
   -
     name: answer_required
-    message: 'This question requires an answer.'
+    message: 'You need to answer this question.'
 question: 'Self-service provisioning supported'
