--- a/g6/serviceTypesSaaS.yml
+++ b/g6/serviceTypesSaaS.yml
@@ -75,5 +75,5 @@ options:
 validations:
   -
     name: answer_required
-    message: 'This question requires an answer.'
+    message: 'You need to answer this question.'
 question: 'Choose the categories that apply to your service'
