--- a/g6/supportedBrowsers.yml
+++ b/g6/supportedBrowsers.yml
@@ -38,5 +38,5 @@ options:
 validations:
   -
     name: answer_required
-    message: 'This question requires an answer.'
+    message: 'You need to answer this question.'
 question: 'Supported web browsers'
