--- a/g6/analyticsAvailable.yml
+++ b/g6/analyticsAvailable.yml
@@ -10,5 +10,5 @@ filterLabel: 'Real-time management information available'
 validations:
   -
     name: answer_required
-    message: 'This question requires an answer.'
+    message: 'You need to answer this question.'
 question: 'Real-time management information available'
