--- a/g6/dataBackupRecovery.yml
+++ b/g6/dataBackupRecovery.yml
@@ -13,5 +13,5 @@ filterLabel: 'Backup, disaster recovery and resilience plan in place'
 validations:
   -
     name: answer_required
-    message: 'This question requires an answer.'
+    message: 'You need to answer this question.'
 question: 'Backup, disaster recovery and resilience plan in place'
