--- a/g6/dataManagementLocations.yml
+++ b/g6/dataManagementLocations.yml
@@ -28,5 +28,8 @@ options:
 validations:
   -
     name: answer_required
-    message: 'This question requires an answer.'
+    message: 'You need to answer this question.'
+  -
+    name: assurance_required
+    message: 'You need to confirm how you can back up your response.'
 question: 'Data management location'
