--- a/g6/datacentreTier.yml
+++ b/g6/datacentreTier.yml
@@ -39,5 +39,5 @@ options:
 validations:
   -
     name: answer_required
-    message: 'This question requires an answer.'
+    message: 'You need to answer this question.'
 question: 'Datacentre tier'
