--- a/g6/datacentresEUCode.yml
+++ b/g6/datacentresEUCode.yml
@@ -7,11 +7,10 @@ depends:
       - IaaS
 servicePageLabel: 'Datacentres adhere to the EU code of conduct for energy-efficient datacentres'
 assuranceApproach: null
-assuranceHint: null
 type: boolean
 filterLabel: 'Datacentres adhere to the EU code of conduct for energy-efficient datacentres'
 validations:
   -
     name: answer_required
-    message: 'This question requires an answer.'
+    message: 'You need to answer this question.'
 question: 'Datacentres adhere to the EU code of conduct for energy-efficient datacentres'
