--- a/g6/educationPricing.yml
+++ b/g6/educationPricing.yml
@@ -12,5 +12,5 @@ filterLabel: 'Education pricing'
 validations:
   -
     name: answer_required
-    message: 'This question requires an answer.'
+    message: 'You need to answer this question.'
 question: 'Education pricing'
