--- a/g6/elasticCloud.yml
+++ b/g6/elasticCloud.yml
@@ -11,5 +11,5 @@ filterLabel: 'Elastic cloud approach supported'
 validations:
   -
     name: answer_required
-    message: 'This question requires an answer.'
+    message: 'You need to answer this question.'
 question: 'Elastic cloud approach supported'
