--- a/g6/freeOption.yml
+++ b/g6/freeOption.yml
@@ -10,5 +10,5 @@ filterLabel: 'Free option'
 validations:
   -
     name: answer_required
-    message: 'This question requires an answer.'
+    message: 'You need to answer this question.'
 question: 'Free option'
