--- a/g6/guaranteedResources.yml
+++ b/g6/guaranteedResources.yml
@@ -11,5 +11,5 @@ filterLabel: 'Guaranteed resources defined'
 validations:
   -
     name: answer_required
-    message: 'This question requires an answer.'
+    message: 'You need to answer this question.'
 question: 'Guaranteed resources defined'
