--- a/g6/minimumContractPeriod.yml
+++ b/g6/minimumContractPeriod.yml
@@ -25,5 +25,5 @@ options:
 validations:
   -
     name: answer_required
-    message: 'This question requires an answer.'
+    message: 'You need to answer this question.'
 question: 'Minimum contract period'
