--- a/g6/networksConnected.yml
+++ b/g6/networksConnected.yml
@@ -31,5 +31,5 @@ options:
 validations:
   -
     name: answer_required
-    message: 'This question requires an answer.'
+    message: 'You need to answer this question.'
 question: 'Networks the service is directly connected to'
