--- a/g6/offlineWorking.yml
+++ b/g6/offlineWorking.yml
@@ -10,5 +10,5 @@ filterLabel: 'Offline working and syncing supported'
 validations:
   -
     name: answer_required
-    message: 'This question requires an answer.'
+    message: 'You need to answer this question.'
 question: 'Offline working and syncing supported'
