--- a/g6/serviceAvailabilityPercentage.yml
+++ b/g6/serviceAvailabilityPercentage.yml
@@ -14,8 +14,11 @@ filterLabel: 'Service availability'
 validations:
   -
     name: answer_required
-    message: 'This question requires an answer.'
+    message: 'You need to answer this question.'
   -
     name: not_a_number
     message: 'Availability must be a number less than 100.'
+  -
+    name: assurance_required
+    message: 'You need to confirm how you can back up your response.'
 question: 'Service availability'
