--- a/g6/serviceOnboarding.yml
+++ b/g6/serviceOnboarding.yml
@@ -10,5 +10,5 @@ filterLabel: 'Service onboarding process included'
 validations:
   -
     name: answer_required
-    message: 'This question requires an answer.'
+    message: 'You need to answer this question.'
 question: 'Service onboarding process included'
