--- a/g6/supportResponseTime.yml
+++ b/g6/supportResponseTime.yml
@@ -11,7 +11,7 @@ type: text
 validations:
   -
     name: answer_required
-    message: 'This question requires an answer.'
+    message: 'You need to answer this question.'
   -
     name: under_20_words
     message: 'Support response time must be no more than 20 words.'
