--- a/g6/supportTypes.yml
+++ b/g6/supportTypes.yml
@@ -27,5 +27,5 @@ options:
 validations:
   -
     name: answer_required
-    message: 'This question requires an answer.'
+    message: 'You need to answer this question.'
 question: 'Support service type'
