--- a/g6/vatIncluded.yml
+++ b/g6/vatIncluded.yml
@@ -11,5 +11,5 @@ filterLabel: 'VAT included'
 validations:
   -
     name: answer_required
-    message: 'This question requires an answer.'
+    message: 'You need to answer this question.'
 question: 'VAT included'
