--- a/g7_declaration/SQ2-1f.yml
+++ b/g7_declaration/SQ2-1f.yml
@@ -5,5 +5,7 @@ question: >
     - section 41 of the Counter Terrorism Act 2008
   
     - schedule 2 of the Counter Terrorism Act 2008 where the court has determined that there is a terrorist connection
-  
+
+hint: "Answer 'yes' if anyone who represents your organisation or partner organisation has been convicted of any of the above."
+
 type: boolean
