--- a/g7_declaration/SQC3.yml
+++ b/g7_declaration/SQC3.yml
@@ -21,3 +21,5 @@ options:
     label: pregnancy or maternity
   -
     label: human rights
+
+hint: "You must select each of the boxes to confirm that your organisation complies with the legal equality and diversity obligations."
