--- a/g7_declaration/SQC3.yml
+++ b/g7_declaration/SQC3.yml
@@ -22,4 +22,4 @@ options:
   -
     label: human rights
 
-hint: "You must select all the boxes to confirm that your organisation complies with legal equality and diversity obligations."
+hint: "You must select all the boxes to confirm that your organisation complies with its legal equality and diversity obligations."
