--- a/g7_declaration/SQ1-1h.yml
+++ b/g7_declaration/SQ1-1h.yml
@@ -1,5 +1,5 @@
 question: "What is your organisation's registered VAT number?"
-hint: There are either 9 or 12 characters in a VAT number.
+hint: There are between 8 and 12 characters in a VAT number. If your organisation is not registered in Europe, enter N/A.
 type: text
 validations:
   -
