--- a/g7_declaration/SQ1-1j-i.yml
+++ b/g7_declaration/SQ1-1j-i.yml
@@ -7,6 +7,8 @@ options:
     label: licensed
   -
     label: a member of a relevant organisation
+  -
+    label: none of the above    
 validations:
   -
     name: answer_required
