Add declaration questions for DOS
This is a dump of all the questions in this document:
https://docs.google.com/document/d/1pxM52rDLL4HTWKXJHZf2t_TkD8dj9sCE2MjcGYDZS9Y/edit?ts=561ba886

This is so we can start iterating on them in a sensible way and track the
changes in Git. It's not suggested that the wording or format of the questions
is 'right' yet.

--- a/frameworks/digital-outcomes-and-specialists/manifests/declaration.yml
+++ b/frameworks/digital-outcomes-and-specialists/manifests/declaration.yml
@@ -2,4 +2,92 @@
   name: Page 1
   editable: True
   questions:
-    - example
+    - termsAndConditions
+    - davidKershaw
+    - readUnderstoodGuidance
+    - understandTool
+    - understandHowToAskQuestions
+    - environmentallyFriendly
+    - consistentDelivery
+    - continuousProfessionalDevelopment
+    - customerSatisfactionProcess
+    - skillsAndCapabilityAssessment
+    - civilServiceValues
+    - permanentMemberOfStaff
+    - equalityAndDiversity
+    - outcomes
+    - specialists
+    - researchStudios
+    - participants
+    - userNeeds
+    - changesInNeeds
+    - framingNeeds
+    - freeAndOpenData
+    - bespokeSystemInformation
+    - openStandardsComponents
+    - governmentsDesire
+    - reusePurchasedAssets
+    - governmentSecurityPrinciples
+    - openStandardsPrinciples
+    - openSourceLicence
+    - safeguardPersonalData
+    - incentives
+    - safeguardData
+    - safeguardOfficialInformation
+    - hideGovernment
+    - technologyCodesOfPractice
+    - serviceStandard
+    - ongoingEngagement
+    - transparentContracting
+    - publishContracts
+    - canProvideFromDayOne
+    - evidence
+    - canProvideServices
+    - skillsAndResources
+    - accuratelyDescribed
+    - proofOfClaims
+    - MI
+    - primaryContact
+    - primaryContactEmail
+    - nameOfOrganisation
+    - registeredAddress
+    - tradingStatus
+    - tradingStatusOther
+    - tradingNames
+    - firstRegistered
+    - firstRegisteredCountry
+    - companyRegistrationNumber
+    - registeredVATNumber
+    - establishedInTheUK
+    - appropriateTradeRegisters
+    - appropriateTradeRegistersNumber
+    - licenceOrMemberRequired
+    - licenceOrMemberRequiredDetails
+    - organisationSize
+    - subcontracting
+    - contactNameContractNotice
+    - contactEmailContractNotice
+    - cyberEssentials
+    - cyberEssentialsPlus
+    - employmentAgency
+    - conspiracyCorruptionBribery
+    - fraudAndTheft
+    - terrorism
+    - organisedCrime
+    - taxEvasion
+    - environmentalSocialLabourLaw
+    - bankrupt
+    - graveProfessionalMisconduct
+    - distortingCompetition
+    - conflictOfInterest
+    - distortedCompetition
+    - significantOrPersistentDeficiencies
+    - seriousMisrepresentation
+    - witheldSupportingDocuments
+    - influencedContractingAuthority
+    - confidentialInformation
+    - misleadingInformation
+    - mitigatingFactors
+    - unspentTaxConvictions
+    - GAAR
+    - mitigatingFactors2
