--- a/frameworks/digital-outcomes-and-specialists/questions/declaration/civilServiceValues.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/declaration/civilServiceValues.yml
@@ -1,3 +1,3 @@
 question: >
-  Please confirm  you will support the Civil Service values (see: https://www.gov.uk/government/publications/civil-service-code/the-civil-service-code) and could you provide evidence on request of how you do this?
+  Please confirm  you will support the [Civil Service values](https://www.gov.uk/government/publications/civil-service-code/the-civil-service-code) and could you provide evidence on request of how you do this?
 type: boolean
