--- a/frameworks/digital-outcomes-and-specialists/questions/declaration/cyberEssentialsPlus.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/declaration/cyberEssentialsPlus.yml
@@ -1,2 +1,2 @@
-question: Are you certified to the Cyber Essentials Plus level under the Cyber Essentials scheme? (https://www.gov.uk/government/publications/cyber-essentials-scheme-overview)
+question: Are you certified to the Cyber Essentials Plus level under the [Cyber Essentials scheme](https://www.gov.uk/government/publications/cyber-essentials-scheme-overview)?
 type: boolean
