--- a/frameworks/digital-outcomes-and-specialists/questions/declaration/publishContracts.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/declaration/publishContracts.yml
@@ -1,2 +1,2 @@
-question: "Transparent contracting. Are you willing to publish contracts in line with government policy? (see: https://www.gov.uk/service-manual)"
+question: "Transparent contracting. Are you willing to publish contracts in line with [government policy](https://www.gov.uk/service-manual)?"
 type: boolean
