--- a/frameworks/digital-outcomes-and-specialists/questions/declaration/permanentMemberOfStaff.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/declaration/permanentMemberOfStaff.yml
@@ -1,3 +1,3 @@
 question: >
-  Please confirm that your organisation has at least one permanent member of staff who delivers eachthe service offered.
+  Please confirm that your organisation has at least one permanent member of staff who delivers each of the services offered.
 type: boolean
