Add missing question 1

--- a/frameworks/digital-outcomes-and-specialists/manifests/declaration.yml
+++ b/frameworks/digital-outcomes-and-specialists/manifests/declaration.yml
@@ -2,6 +2,7 @@
   name: Page 1
   editable: True
   questions:
+    - termsOfParticipation
     - termsAndConditions
     - davidKershaw
     - readUnderstoodGuidance
