--- a/frameworks/digital-outcomes-and-specialists/questions/declaration/mitigatingFactors2.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/declaration/mitigatingFactors2.yml
@@ -1,2 +1,2 @@
-question: If you responded yes to either question 53 or question 54, please provide details of any mitigating factors that you think should be taken into consideration.
+question: If you responded yes to either question [[unspentTaxConvictions]] or question [[GAAR]], please provide details of any mitigating factors that you think should be taken into consideration.
 type: textbox_large
