--- a/frameworks/digital-outcomes-and-specialists/manifests/declaration.yml
+++ b/frameworks/digital-outcomes-and-specialists/manifests/declaration.yml
@@ -16,6 +16,17 @@
 -
   name: Grounds for mandatory exclusion
   editable: True
+  description: >
+    You must select NO for every question in Section C for your bid to be
+    considered eligible. If you cannot answer NO to every question in this
+    section, it is very unlikely that your bid will be accepted.
+
+
+    Organisation representatives include: members of your group of economic
+    operators, their proposed subcontractors, and any directors, partners, or
+    any other person who has powers of representation, decision or control.
+    Check that your organisation complies with Regulation 57(1) of the Public
+    Contracts Regulations 2015.
   questions:
     - conspiracyCorruptionBribery
     - fraudAndTheft
@@ -24,6 +35,23 @@
 -
   name: Grounds for discretionary exclusion
   editable: True
+  description: >
+    You should select NO to every question for your bid to be considered
+    eligible. If you select YES, your bid may not be accepted. If you do select
+    YES, you must provide full details of any subsequent event or remedial
+    action that you think the authority should take into consideration. The
+    authority will use the information you provide to consider whether or not
+    you will be able to proceed any further with this procurement.
+
+
+    In questions Cross check numbers, partner organisations include: members
+    of your group of economic operators or their proposed subcontractors.
+
+
+    The authority is also entitled to exclude you if you are guilty of serious
+    misrepresentation in providing any information referred to within
+    regulations 23, 24, 25, 27 or 27 of the Public Contracts Regulations 2015
+    or if you fail to provide any such information requested by the authority.
   questions:
     - taxEvasion
     - environmentalSocialLabourLaw
