Add links and make style changes
1st pass of content edits

--

Update MI.yml

lower case framework name to upper case.

Update appropriateTradeRegisters.yml

added link.

Update accuratelyDescribed.yml

upper case DOS and reworded for (a bit more) clarity. might need further thought.

Update bespokeSystemInformation.yml

rephrased into a single question.

Update canProvideFromDayOne.yml

Slightly simplified.

Update canProvideServices.yml

lower case lot and framework agreement.

Update changesInNeeds.yml

Turned into a question.

Update civilServiceValues.yml

rephrased.

Update companyRegistrationNumber.yml

tried to rephrase to address issues experienced by users in G7. needs looking at again.

Update continuousProfessionalDevelopment.yml

rephrased and corrected typo.

Update customerSatisfactionProcess.yml

rephrased.

Update cyberEssentials.yml

rephrased.

Update cyberEssentials.yml

Update cyberEssentialsPlus.yml

added hint to be consistent with other cyber essentials question - might need to remove.

Update davidKershaw.yml

rephrased some questions. needs breaking up.

Update employmentAgency.yml

fixed typo.

Update environmentallyFriendly.yml

is there any meaningful guidance we can give here?

Update equalityAndDiversity.yml

updated to fit latest legislation.

Update evidence.yml

may need to move question. slightly edited.

Update framingNeeds.yml

rephrased and included link.

Update freeAndOpenData.yml

slightly edited.

Update governmentSecurityPrinciples.yml

What do we mean when we talk about security principles here? The cloud
ones: https://www.gov.uk/government/publications/cloud-service-security-principles/cloud-service-security-principles ????
If we mention them, we should link to them. Can't find any others.

Update governmentsDesire.yml

rephrased

Update governmentSecurityPrinciples.yml

Update hideGovernment.yml

rephrased and deleted:  "whilst complying with the necessary protocols? [insert link/guidance to the protocols]

Update incen

--- a/frameworks/digital-outcomes-and-specialists/questions/declaration/MI.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/declaration/MI.yml
@@ -1,2 +1,2 @@
-question: Do you confirm that you’re prepared to provide all Digital outcomes and specialists related management information (MI) to CCS as outlined in the framework agreement?
+question: Do you confirm that you’re prepared to provide all Digital Outcomes and Specialists-related management information (MI) to CCS as outlined in the framework agreement?
 type: boolean
