--- a/frameworks/digital-outcomes-and-specialists/questions/declaration/accuratelyDescribed.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/declaration/accuratelyDescribed.yml
@@ -1,2 +1,2 @@
-question: Do you confirm that all the services you’re submitting for Digital outcomes and specialists will be accurately described in the Digital Marketplace and will be a true representation?
+question: Do you confirm that all the service descriptions you’re submitting for Digital Outcomes and Specialists on the Digital Marketplace will be accurate and true representations?
 type: boolean
