--- a/frameworks/digital-outcomes-and-specialists/questions/declaration/continuousProfessionalDevelopment.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/declaration/continuousProfessionalDevelopment.yml
@@ -1,2 +1,2 @@
-question: Do you practice continuous professional development within your company and individually and can you provide evidence of this on request?
+question: Does your organisation practise continuous professional development for your employees, and can you provide evidence of this on request?
 type: boolean
