--- a/frameworks/digital-outcomes-and-specialists/questions/declaration/freeAndOpenData.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/declaration/freeAndOpenData.yml
@@ -1,2 +1,2 @@
-question: Data is a public asset. Do you support government’s need for free and open access to non-personal user and service data, so that it can deliver and continuously improve its services?
+question: Do you support the government’s need for free and open access to non-personal user and service data so that it can deliver and improve its services?
 type: boolean
