--- a/frameworks/digital-outcomes-and-specialists/questions/declaration/hideGovernment.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/declaration/hideGovernment.yml
@@ -1,2 +1,1 @@
-question: Are you able to recruit participants without revealing details of the government department or agency whilst complying with the necessary protocols? [insert link/guidance to the protocols]
-type: boolean
+question: Can you, if asked, recruit participants without revealing details of the government department or agency you're working with?
