--- a/frameworks/digital-outcomes-and-specialists/questions/declaration/ongoingEngagement.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/declaration/ongoingEngagement.yml
@@ -1,2 +1,2 @@
-question: "Effective ongoing engagement. Will you work in ways that are consistent with the [Government Service Design Manual](https://www.gov.uk/service-manual)?"
+question: "Will you work in ways that are consistent with the [government service design manual](https://www.gov.uk/service-manual)?"
 type: boolean
