--- a/frameworks/digital-outcomes-and-specialists/questions/declaration/openStandardsComponents.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/declaration/openStandardsComponents.yml
@@ -1,2 +1,2 @@
-question: Services built on open standards and reusable, open source components. Do you support the use of standard, accessible data protocols, such as open standards, to ensure they are interoperable?
+question: Do you support the use of standard, accessible data protocols, like open standards, to ensure that they are interoperable?
 type: boolean
