--- a/frameworks/digital-outcomes-and-specialists/questions/declaration/readUnderstoodGuidance.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/declaration/readUnderstoodGuidance.yml
@@ -1,2 +1,2 @@
-question: Have you read and understood the guidance on how to apply to Digital outcomes and specialists using your supplier account on the Digital Marketplace?
+question: Have you read and understood the guidance on how to apply to Digital Outcomes and Specialists using the Digital Marketplace?
 type: boolean
