--- a/frameworks/digital-outcomes-and-specialists/questions/declaration/serviceStandard.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/declaration/serviceStandard.yml
@@ -1,3 +1,3 @@
 question: >
-  Please confirm you are aware of and will comply with the Digital by Default Service Standard (and future iterations as developed by Government) and the Design Principles. [look at if need to say “with your relevant bit”]
+  Please confirm that you are aware of, and will comply with, the [Digital by Default Service Standard](https://www.gov.uk/service-manual/digital-by-default) (and future iterations developed by the government) and the government [service design principles](https://www.gov.uk/design-principles). 
 type: boolean
