--- a/frameworks/digital-outcomes-and-specialists/questions/declaration/tradingStatusOther.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/declaration/tradingStatusOther.yml
@@ -1,2 +1,2 @@
-question: Describe your trading status if you answered ‘other’ to
+question: Describe your trading status if you answered ‘other’ to [[tradingStatus]].
 type: text
