--- a/frameworks/digital-outcomes-and-specialists/questions/declaration/transparentContracting.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/declaration/transparentContracting.yml
@@ -1,2 +1,2 @@
-question: Transparent contracting. Will you be transparent about your financial performance, in line with your contractual obligations and government guidance on Open Book Contract Management (OBCM)?
+question: Will you be transparent about your financial performance, in line with your contractual obligations and government guidance on Open Book Contract Management (OBCM)?
 type: boolean
