--- a/frameworks/digital-outcomes-and-specialists/questions/declaration/userNeeds.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/declaration/userNeeds.yml
@@ -1,2 +1,2 @@
-question: "User needs first. Can you demonstrate an understanding of user needs as set out in the [Digital by Default Service Standard](https://www.gov.uk/service-manual/digital-by-default)?"
+question: "Can you demonstrate an understanding of user needs as set out in the [Digital by Default Service Standard](https://www.gov.uk/service-manual/digital-by-default)?"
 type: boolean
