--- a/frameworks/digital-outcomes-and-specialists/questions/declaration/canProvideFromDayOne.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/declaration/canProvideFromDayOne.yml
@@ -1,3 +1,3 @@
 question: >
-  Please confirm that you can provide all services submitted via the DM Supplier Submission from day one if you are awarded a place on the Digital Outcomes and Specialists Framework Agreement.
+  Please confirm that, if accepted, you can provide all the services you're submitting to Digital Outcomes and Specialists from the first day you're awarded a place on the framework.
 type: boolean
