--- a/frameworks/digital-outcomes-and-specialists/questions/declaration/companyRegistrationNumber.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/declaration/companyRegistrationNumber.yml
@@ -1,3 +1,3 @@
 question: What is your organisation’s company registration number?
 type: text
-hint: If you don’t have a Companies House number, provide the company registration number from the country where you first registered.
+hint: If you weren't established in the UK and don’t have a Companies House number, provide an equivalent company registration number.
