--- a/frameworks/digital-outcomes-and-specialists/questions/declaration/customerSatisfactionProcess.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/declaration/customerSatisfactionProcess.yml
@@ -1,2 +1,2 @@
-question: Do you have a process to measure customer satisfaction and can you provide it  (ie the process) on request?
+question: Do you have a process to measure customer satisfaction and can you provide evidence of that process on request?
 type: boolean
