--- a/frameworks/digital-outcomes-and-specialists/questions/declaration/cyberEssentials.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/declaration/cyberEssentials.yml
@@ -1,3 +1,3 @@
 question: Are you certified to the Cyber Essentials level under the [Cyber Essentials scheme](https://www.gov.uk/government/publications/cyber-essentials-scheme-overview)?
 type: boolean
-hint: "Additional guidance needed: this is not essential, for info only, explain importance of this and who this question is relevant for - this is about how supplier safeguards self against cyber attack"
+hint: "This is to establish how you safeguard your organisation against any cyber attack. (Optional.)"
