--- a/frameworks/digital-outcomes-and-specialists/questions/declaration/evidence.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/declaration/evidence.yml
@@ -1,2 +1,2 @@
-question: If requested by a buyer, can you provide, evidence of previous experience and comparable contracts [possibly question should be in a different place]
+question: If requested by a buyer, can you provide evidence of previous experience and comparable contracts?
 type: boolean
