--- a/frameworks/digital-outcomes-and-specialists/questions/declaration/governmentSecurityPrinciples.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/declaration/governmentSecurityPrinciples.yml
@@ -1,2 +1,2 @@
-question: Services built on open standards and reusable, open source components. Do you support government’s new security principles, which should allow the use of standard, business quality solutions for the majority of services?
+question: Do you support the [government’s security principles](https://www.gov.uk/guidance/digital-and-technology-skills/cyber-security-and-information-assurance), which should allow the use of services which are built on [open standards](https://www.gov.uk/government/publications/open-standards-for-government) and reusable, open-source components?
 type: boolean
