--- a/frameworks/digital-outcomes-and-specialists/questions/declaration/governmentsDesire.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/declaration/governmentsDesire.yml
@@ -1,9 +1,3 @@
 question: >
-  Do you….. build services using open standards which are reusable and use open source components?
-
-  OR
-
-  Do you support government’s desire where possible to buy once and as one buyer, for the whole of government?
-
-  (re-write to explain how is this directly relevant to DOS? e.g. Do you support government’s desire where possible to buy once and as one buyer so that it can be re-used across the whole of government? )
+  Do you support government aims to buy once and as one buyer so that services can be reused across government?
 type: boolean
