--- a/frameworks/digital-outcomes-and-specialists/questions/declaration/incentives.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/declaration/incentives.yml
@@ -1,2 +1,2 @@
-question: Do you agree to manage any incentives to participants?
+question: Do you agree to manage any incentives to user research participants?
 type: boolean
