--- a/frameworks/digital-outcomes-and-specialists/questions/declaration/openSourceLicence.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/declaration/openSourceLicence.yml
@@ -1,2 +1,2 @@
-question: Services built on open standards and reusable, open source components. Do you support the publication of specially written software under appropriate open source licence by default, to allow it to be used and improved by other authors?
+question: Do you support the publication of specially written software under the appropriate open source licence so that it can be used and improved by other authors?
 type: boolean
