--- a/frameworks/digital-outcomes-and-specialists/questions/declaration/openStandardsPrinciples.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/declaration/openStandardsPrinciples.yml
@@ -1,2 +1,2 @@
-question: (Does this duplicate or overlap with 18.6?) Services built on open standards and reusable, open source components. Do you support government’s Open Standards Principles and implementation of open standards selected for use across government?
+question: (Does this duplicate or overlap with 18.6?) Do you support the government’s [open standards principles](https://www.gov.uk/service-manual/making-software/open-standards-and-licensing.html#building-on-open-standards) and the implementation of open standards selected for use across government?
 type: boolean
