--- a/frameworks/digital-outcomes-and-specialists/questions/declaration/proofOfClaims.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/declaration/proofOfClaims.yml
@@ -1,2 +1,2 @@
-question: Do you confirm that you are prepared to provide proof of any claims made about the services you're submitting to Digital outcomes and specialists?
+question: Do you confirm that you are prepared to provide proof of any claims made about the services you're submitting to Digital Outcomes and Specialists?
 type: boolean
