--- a/frameworks/digital-outcomes-and-specialists/questions/declaration/safeguardData.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/declaration/safeguardData.yml
@@ -1,2 +1,2 @@
-question: Do you agree to safeguard personal data (for example, by not sharing videos of research sessions)? ref
+question: Do you agree to safeguard personal data, eg by not sharing videos of research sessions? 
 type: boolean
