--- a/frameworks/digital-outcomes-and-specialists/questions/declaration/safeguardOfficialInformation.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/declaration/safeguardOfficialInformation.yml
@@ -1,2 +1,2 @@
-question: Do you agree to safeguard official government information (for example, by not revealing that government is the client when advertising for participants) including respecting government official security classifications?
+question: Do you agree to respect government official security classifications and safeguard official government information, eg by not revealing that government is the client when advertising for participants?
 type: boolean
