--- a/frameworks/digital-outcomes-and-specialists/questions/declaration/technologyCodesOfPractice.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/declaration/technologyCodesOfPractice.yml
@@ -1,3 +1,3 @@
 question: >
-  Please confirm you will comply with the Technology codes of practice (and future iterations as developed by Government).
+  Please confirm you will comply with the government's [technology code of practice](https://www.gov.uk/service-manual/technology/code-of-practice.html) (and future iterations developed by the government).
 type: boolean
