--- a/frameworks/digital-outcomes-and-specialists/questions/declaration/termsOfParticipation.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/declaration/termsOfParticipation.yml
@@ -1,2 +1,2 @@
-question: Do you accept, without amendment or qualification, the terms and conditions as set out in the framework agreement and call-off contract documents?
+question: Do you accept, without amendment or qualification, the terms of participation as set out in the framework agreement and call-off contract documents?
 type: boolean
